--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h2 id="name">Carla Nahra</h2>
             <h1 id="profession">UX/UI Designer</h1>
             <div class="header-buttons">
-                <a href="#Projects">
-                    <button>See Projects<i class="fa fa-long-arrow-right"></i></button>
+                <a href="">
+                    <button>See Portfolio<i class="fa fa-long-arrow-right"></i></button>
                 </a>
                 <a href="images/Currículum-CarlaNahra-UXUIDesigner.pdf" download="CV-CarlaNahra-UXUIDesigner" target="_blank">
                     <button class="secondary">Download CV<i class="fa fa-download"></i></button>
